--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PurwakartaChain Dashboard</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PWKC DApp</title>
+  <style>
+    body { margin: 0; font-family: Arial, sans-serif; background: #f4f4f4; }
+    nav { background: #222; color: #fff; padding: 10px; display: flex; justify-content: space-between; align-items: center; }
+    .hamburger { cursor: pointer; font-size: 24px; }
+    .menu { display: none; flex-direction: column; background: #333; }
+    .menu a { color: white; padding: 10px; text-decoration: none; border-bottom: 1px solid #444; }
+    .menu a:hover { background: #444; }
+    .content { padding: 20px; }
+    .hidden { display: none; }
+  </style>
+</head>
+<body>
+  <nav>
+    <div>PurwaKartaChain</div>
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+  </nav>
+  <div class="menu" id="menu">
+    <a href="#" onclick="showTab('home')">Home</a>
+    <a href="#" onclick="showTab('leaderboard')">Leaderboard</a>
+    <a href="#" onclick="showTab('staking')">Staking / Faucet</a>
+    <a href="#" onclick="showTab('nft')">Mint NFT</a>
+  </div>
+
+  <div class="content">
+    <div id="home">
+      <h1>Welcome to PWKC DApp</h1>
+      <p>Token: PurwakartaChain (PWKC)</p>
+    </div>
+    <div id="leaderboard" class="hidden">
+      <h1>Leaderboard</h1>
+      <p>Data Leaderboard akan muncul di sini.</p>
+    </div>
+    <div id="staking" class="hidden">
+      <h1>Staking & Faucet</h1>
+      <button onclick="stake()">Stake</button>
+      <button onclick="claimFaucet()">Claim Faucet</button>
+      <button onclick="claimRewards()">Claim Rewards</button>
+      <button onclick="withdraw()">Withdraw</button>
+    </div>
+    <div id="nft" class="hidden">
+      <h1>Mint NFT</h1>
+      <button onclick="mintNFT()">Mint NFT</button>
+    </div>
+  </div>
+
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById('menu');
+      menu.style.display = menu.style.display === 'flex' ? 'none' : 'flex';
+    }
+
+    function showTab(tab) {
+      document.querySelectorAll('.content > div').forEach(div => div.classList.add('hidden'));
+      document.getElementById(tab).classList.remove('hidden');
+      toggleMenu();
+    }
+
+    // Placeholder functions untuk Web3
+    function stake() { alert("Stake function here"); }
+    function claimFaucet() { alert("Faucet claim here"); }
+    function claimRewards() { alert("Claim rewards here"); }
+    function withdraw() { alert("Withdraw here"); }
+    function mintNFT() { alert("Mint NFT here"); }
+  </script>
+</body>
 </html>
