--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PWKC DApp</title>
+  <title>PurwakartaChain (PWKC) DApp</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+
+  <!-- Favicon (SVG PWKC) -->
+  <link rel="icon" href="data:image/svg+xml,
+    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+      <circle cx='50' cy='50' r='48' fill='%234F46E5' stroke='white' stroke-width='4'/>
+      <text x='50%25' y='55%25' text-anchor='middle' fill='white' font-size='28' font-family='Arial' dy='.3em'>PWKC</text>
+    </svg>">
+
   <style>
     .tab-content { display: none; }
     .tab-active { display: block; }
@@ -14,7 +23,14 @@
 
   <!-- Navbar -->
   <nav class="bg-indigo-600 text-white px-4 py-3 flex justify-between items-center">
-    <div class="text-xl font-bold">PWKC DApp</div>
+    <div class="flex items-center gap-2">
+      <!-- Inline SVG Logo -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 100 100">
+        <circle cx="50" cy="50" r="48" fill="#4F46E5" stroke="white" stroke-width="4"/>
+        <text x="50%" y="55%" text-anchor="middle" fill="white" font-size="28" font-family="Arial" dy=".3em">PWKC</text>
+      </svg>
+      <span class="text-xl font-bold">PurwakartaChain</span>
+    </div>
     <button id="menuBtn" class="md:hidden">☰</button>
     <ul id="menu" class="hidden md:flex gap-4">
       <li><a href="#" onclick="openTab('home')">Home</a></li>
@@ -29,9 +45,10 @@
 
     <!-- Home -->
     <div id="home" class="tab-content tab-active">
-      <h1 class="text-2xl font-bold mb-4">Selamat Datang di PWKC</h1>
-      <p class="mb-2">Dashboard sederhana untuk token PWKC.</p>
-      <button class="bg-indigo-600 text-white px-4 py-2 rounded">Connect Wallet</button>
+      <h1 class="text-2xl font-bold mb-4">Selamat Datang di PurwakartaChain (PWKC)</h1>
+      <p class="mb-2">Dashboard resmi token PWKC.</p>
+      <button id="connectBtn" class="bg-indigo-600 text-white px-4 py-2 rounded">Connect Wallet</button>
+      <p id="walletAddress" class="mt-2 text-gray-700"></p>
     </div>
 
     <!-- Leaderboard -->
@@ -57,8 +74,11 @@
     <div id="staking" class="tab-content">
       <h1 class="text-2xl font-bold mb-4">Staking / Faucet</h1>
       <p class="mb-2">Klaim token PWKC atau staking token kamu.</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded">Claim Faucet</button>
-      <button class="bg-purple-600 text-white px-4 py-2 rounded ml-2">Stake Tokens</button>
+      <div class="flex gap-2">
+        <button class="bg-green-600 text-white px-4 py-2 rounded">Claim Faucet</button>
+        <button class="bg-purple-600 text-white px-4 py-2 rounded">Stake Tokens</button>
+        <button class="bg-yellow-600 text-white px-4 py-2 rounded">Claim Rewards</button>
+      </div>
     </div>
 
     <!-- Mint NFT -->
@@ -72,6 +92,7 @@
 
   <!-- Script -->
   <script>
+    // Tab Switching
     const tabs = ["home","leaderboard","staking","mint"];
     function openTab(id) {
       tabs.forEach(tab => {
@@ -80,11 +101,35 @@
       document.getElementById(id).classList.add("tab-active");
     }
 
+    // Hamburger menu
     const menuBtn = document.getElementById("menuBtn");
     const menu = document.getElementById("menu");
     menuBtn.addEventListener("click", () => {
       menu.classList.toggle("hidden");
     });
+
+    // Wallet Connect
+    const connectBtn = document.getElementById("connectBtn");
+    const walletAddress = document.getElementById("walletAddress");
+
+    async function connectWallet() {
+      if (typeof window.ethereum !== "undefined") {
+        try {
+          const provider = new ethers.providers.Web3Provider(window.ethereum);
+          await provider.send("eth_requestAccounts", []);
+          const signer = provider.getSigner();
+          const address = await signer.getAddress();
+          walletAddress.textContent = "✅ Connected: " + address;
+        } catch (err) {
+          console.error(err);
+          walletAddress.textContent = "❌ Gagal connect wallet!";
+        }
+      } else {
+        alert("Metamask / TrustWallet tidak ditemukan!");
+      }
+    }
+
+    connectBtn.addEventListener("click", connectWallet);
   </script>
 
 </body>
