--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PurwakartaChain (PWKC) DApp</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <!-- Favicon -->
-  <link rel="icon" href="data:image/svg+xml,
-    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-      <circle cx='50' cy='50' r='48' fill='%230a0f1f' stroke='%234F46E5' stroke-width='4'/>
-      <text x='50%25' y='55%25' text-anchor='middle' fill='%23ffffff' font-size='28' font-family='Arial' dy='.3em'>PWKC</text>
-    </svg>">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
 
   <style>
     body { font-family: 'Poppins', sans-serif; }
@@ -26,22 +19,25 @@
   <!-- Navbar -->
   <nav class="bg-[#111827] px-4 py-3 flex justify-between items-center shadow-md">
     <div class="flex items-center gap-2">
-      <!-- Logo -->
       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 100 100">
         <circle cx="50" cy="50" r="48" fill="#1E3A8A" stroke="white" stroke-width="3"/>
         <text x="50%" y="55%" text-anchor="middle" fill="white" font-size="24" font-family="Arial" dy=".3em">PWKC</text>
       </svg>
       <span class="text-xl font-bold tracking-wide text-indigo-400">PurwakartaChain</span>
     </div>
-    <!-- Hamburger -->
+    <div class="flex items-center gap-4">
+      <ul id="menu" class="hidden md:flex gap-6 font-semibold">
+        <li><a href="#" onclick="openTab('home')" class="hover:text-indigo-400">Home</a></li>
+        <li><a href="#" onclick="openTab('leaderboard')" class="hover:text-indigo-400">Leaderboard</a></li>
+        <li><a href="#" onclick="openTab('staking')" class="hover:text-indigo-400">Staking</a></li>
+        <li><a href="#" onclick="openTab('mint')" class="hover:text-indigo-400">Mint NFT</a></li>
+      </ul>
+      <!-- Connect Wallet Button -->
+      <button id="connectBtn" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg shadow-lg text-sm">
+        🔗 Connect
+      </button>
+    </div>
     <button id="menuBtn" class="md:hidden text-2xl">☰</button>
-    <!-- Menu -->
-    <ul id="menu" class="hidden md:flex gap-6 font-semibold">
-      <li><a href="#" onclick="openTab('home')" class="hover:text-indigo-400">Home</a></li>
-      <li><a href="#" onclick="openTab('leaderboard')" class="hover:text-indigo-400">Leaderboard</a></li>
-      <li><a href="#" onclick="openTab('staking')" class="hover:text-indigo-400">Staking</a></li>
-      <li><a href="#" onclick="openTab('mint')" class="hover:text-indigo-400">Mint NFT</a></li>
-    </ul>
   </nav>
 
   <!-- Mobile Menu -->
@@ -59,7 +55,6 @@
     <div id="home" class="tab-content tab-active">
       <h1 class="text-3xl font-bold mb-4 text-indigo-400">Selamat Datang 🚀</h1>
       <p class="mb-4 text-gray-300">Dashboard resmi <span class="text-indigo-400 font-semibold">PurwakartaChain (PWKC)</span>.</p>
-      <button id="connectBtn" class="bg-indigo-600 hover:bg-indigo-500 text-white px-5 py-2 rounded-lg shadow-lg">🔗 Connect Wallet</button>
       <p id="walletAddress" class="mt-4 text-gray-300"></p>
     </div>
 
@@ -75,10 +70,8 @@
               <th class="px-4 py-2 text-left">Balance</th>
             </tr>
           </thead>
-          <tbody>
-            <tr class="hover:bg-[#374151]"><td class="px-4 py-2">1</td><td>0x1234...</td><td>1000 PWKC</td></tr>
-            <tr class="hover:bg-[#374151]"><td class="px-4 py-2">2</td><td>0xabcd...</td><td>750 PWKC</td></tr>
-            <tr class="hover:bg-[#374151]"><td class="px-4 py-2">3</td><td>0x9876...</td><td>500 PWKC</td></tr>
+          <tbody id="leaderboardBody">
+            <tr><td colspan="3" class="px-4 py-3 text-center">🔄 Loading...</td></tr>
           </tbody>
         </table>
       </div>
@@ -89,9 +82,9 @@
       <h1 class="text-3xl font-bold mb-4 text-indigo-400">💎 Staking / Faucet</h1>
       <p class="mb-4 text-gray-300">Klaim token atau staking untuk reward otomatis.</p>
       <div class="flex flex-wrap gap-3">
-        <button class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded-lg shadow-lg">💰 Claim Faucet</button>
-        <button class="bg-purple-600 hover:bg-purple-500 text-white px-4 py-2 rounded-lg shadow-lg">📥 Stake Tokens</button>
-        <button class="bg-yellow-600 hover:bg-yellow-500 text-white px-4 py-2 rounded-lg shadow-lg">🎁 Claim Rewards</button>
+        <button id="claimFaucetBtn" class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded-lg shadow-lg">💰 Claim Faucet</button>
+        <button id="stakeBtn" class="bg-purple-600 hover:bg-purple-500 text-white px-4 py-2 rounded-lg shadow-lg">📥 Stake Tokens</button>
+        <button id="claimRewardsBtn" class="bg-yellow-600 hover:bg-yellow-500 text-white px-4 py-2 rounded-lg shadow-lg">🎁 Claim Rewards</button>
       </div>
     </div>
 
@@ -99,7 +92,7 @@
     <div id="mint" class="tab-content">
       <h1 class="text-3xl font-bold mb-4 text-indigo-400">🎨 Mint NFT</h1>
       <p class="mb-4 text-gray-300">Buat NFT spesial untuk komunitas PWKC.</p>
-      <button class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-lg shadow-lg">✨ Mint NFT</button>
+      <button id="mintNFTBtn" class="bg-pink-600 hover:bg-pink-500 text-white px-5 py-2 rounded-lg shadow-lg">✨ Mint NFT</button>
     </div>
 
   </div>
@@ -109,42 +102,93 @@
     // Tabs
     const tabs = ["home","leaderboard","staking","mint"];
     function openTab(id) {
-      tabs.forEach(tab => {
-        document.getElementById(tab).classList.remove("tab-active");
-      });
+      tabs.forEach(tab => document.getElementById(tab).classList.remove("tab-active"));
       document.getElementById(id).classList.add("tab-active");
     }
 
-    // Hamburger toggle
+    // Hamburger
     const menuBtn = document.getElementById("menuBtn");
     const mobileMenu = document.getElementById("mobileMenu");
-    menuBtn.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
-    function closeMenu() {
-      mobileMenu.classList.add("hidden");
+    menuBtn.addEventListener("click", () => mobileMenu.classList.toggle("hidden"));
+    function closeMenu() { mobileMenu.classList.add("hidden"); }
+
+    // Web3 & Contracts
+    let provider, signer, token, faucet, staking, nft;
+
+    async function initContracts() {
+      const [tokenABI, faucetABI, stakingABI, nftABI] = await Promise.all([
+        fetch("abi/token.json").then(r => r.json()),
+        fetch("abi/faucet.json").then(r => r.json()),
+        fetch("abi/staking.json").then(r => r.json()),
+        fetch("abi/nft.json").then(r => r.json())
+      ]);
+      token   = new ethers.Contract("0x303C2c8e2551A86F71Ef74C32C4e1110Da53F11B", tokenABI, signer);
+      faucet  = new ethers.Contract("0xBF121f3E9b8865C1a32EB0De7D77121D35c4E8a2", faucetABI, signer);
+      staking = new ethers.Contract("0x752D55A951eb4636c557D48a2664Bc1dD2C777AB", stakingABI, signer);
+      nft     = new ethers.Contract("0x0B0a0d31806e74A9544a8a767866dcDbAE1C1535", nftABI, signer);
+      console.log("✅ Contracts loaded");
     }
 
-    // Wallet connect
+    // Wallet Connect
     const connectBtn = document.getElementById("connectBtn");
     const walletAddress = document.getElementById("walletAddress");
+
+    function shorten(addr) { return addr.slice(0,6)+"..."+addr.slice(-4); }
+
     async function connectWallet() {
-      if (typeof window.ethereum !== "undefined") {
-        try {
-          const provider = new ethers.providers.Web3Provider(window.ethereum);
-          await provider.send("eth_requestAccounts", []);
-          const signer = provider.getSigner();
-          const address = await signer.getAddress();
-          walletAddress.textContent = "✅ Connected: " + address;
-        } catch (err) {
-          walletAddress.textContent = "❌ Gagal connect wallet!";
-        }
-      } else {
-        alert("Metamask / TrustWallet tidak ditemukan!");
+      if (!window.ethereum) return alert("Metamask tidak ditemukan!");
+      try {
+        provider = new ethers.providers.Web3Provider(window.ethereum);
+        await provider.send("eth_requestAccounts", []);
+        signer = provider.getSigner();
+        const address = await signer.getAddress();
+        walletAddress.textContent = "✅ Connected: " + shorten(address);
+        connectBtn.textContent = shorten(address);
+        await initContracts();
+      } catch (e) {
+        console.error(e);
+        walletAddress.textContent = "❌ Gagal connect wallet!";
       }
     }
     connectBtn.addEventListener("click", connectWallet);
-  </script>
 
+    // Faucet
+    document.getElementById("claimFaucetBtn").addEventListener("click", async () => {
+      try {
+        const tx = await faucet.claim();
+        await tx.wait();
+        alert("✅ Faucet claimed!");
+      } catch (e) { console.error(e); alert("❌ Faucet gagal!"); }
+    });
+
+    // Stake
+    document.getElementById("stakeBtn").addEventListener("click", async () => {
+      try {
+        const amount = ethers.utils.parseUnits("100", 18); // contoh 100 PWKC
+        await token.approve(staking.address, amount);
+        const tx = await staking.stake(amount);
+        await tx.wait();
+        alert("✅ Staking sukses!");
+      } catch (e) { console.error(e); alert("❌ Staking gagal!"); }
+    });
+
+    // Rewards
+    document.getElementById("claimRewardsBtn").addEventListener("click", async () => {
+      try {
+        const tx = await staking.claimReward();
+        await tx.wait();
+        alert("🎁 Rewards claimed!");
+      } catch (e) { console.error(e); alert("❌ Claim gagal!"); }
+    });
+
+    // Mint NFT
+    document.getElementById("mintNFTBtn").addEventListener("click", async () => {
+      try {
+        const tx = await nft.mint(); // sesuaikan ABI (mint / safeMint)
+        await tx.wait();
+        alert("✨ NFT minted!");
+      } catch (e) { console.error(e); alert("❌ Mint gagal!"); }
+    });
+  </script>
 </body>
 </html>
