--- a/index.html
+++ b/index.html
@@ -134,42 +134,48 @@ body { font-family: 'Poppins', sans-serif; }
 
   // --- Wallet Connect ---
   async function connectWallet() {
+  let detectedProvider;
+
+  // 🚨 Tempel di sini
+  if (window.ethereum && window.ethereum.isMetaMask) {
+    detectedProvider = window.ethereum; // Metamask Extension
+  } else if (window.okxwallet) {
+    detectedProvider = window.okxwallet; // OKX DApp Browser
+  } else if (window.ethereum) {
+    detectedProvider = window.ethereum; // fallback
+  } else {
+    alert("⚠️ Wallet tidak ditemukan! Gunakan Metamask atau OKX DApp Browser.");
+    return;
+  }
+
   try {
-    // Detect provider: Metamask or OKX DApp
-    let detectedProvider = null;
-    if (window.ethereum) detectedProvider = window.ethereum;
-    else if (window.okxwallet) detectedProvider = window.okxwallet;
+    // Request account
+    await detectedProvider.request({ method: "eth_requestAccounts" });
 
-    if (!detectedProvider) {
-      alert("Metamask / OKX Wallet tidak ditemukan!");
-      return;
-    }
-
+    // Buat provider & signer
     provider = new ethers.providers.Web3Provider(detectedProvider);
-    await provider.send("eth_requestAccounts", []);
     signer = provider.getSigner();
     const address = await signer.getAddress();
 
-    // Update UI
+    // Update UI tombol
     walletMenuBtn.textContent = `${address.substring(0,6)}...${address.slice(-4)}`;
     mobileWalletBtn.textContent = `${address.substring(0,6)}...${address.slice(-4)}`;
-    initContracts();
+
+    initContracts(); // inisialisasi kontrak
     console.log("✅ Wallet connected:", address);
 
-    // Listen for account changes
+    // Listen for changes
     detectedProvider.on("accountsChanged", (accounts) => {
-      if(accounts.length > 0){
+      if(accounts.length>0){
         walletMenuBtn.textContent = `${accounts[0].substring(0,6)}...${accounts[0].slice(-4)}`;
         mobileWalletBtn.textContent = `${accounts[0].substring(0,6)}...${accounts[0].slice(-4)}`;
       } else disconnectWallet();
     });
-
-    // Listen for network changes
     detectedProvider.on("chainChanged", () => window.location.reload());
 
   } catch(err) {
-    console.error("Wallet connection error:", err);
-    alert("❌ Gagal connect wallet, cek konsol!");
+    console.error("Wallet connection failed:", err);
+    alert("❌ Gagal connect wallet! Cek konsol untuk detail.");
   }
 }
 
